--- a/css/myags.css
+++ b/css/myags.css
@@ -50,7 +50,7 @@ ul{margin: 0; }
 
 #main-content {padding:0 10px; text-align: left; margin-top: 65px;}
 p {padding: 0 0 5px;}
-#header {width: 100%; height: 56px; background-color:#E6F4F4; clear: both; position: fixed; padding: 0 0 30px 200px; border-bottom: solid 2px #EF5C29;}
+#header {width: 100%; height: 56px; background-color:#E6F4F4; clear: both; position: fixed; padding: 0 0 30px 200px; border-bottom: solid 2px #EF5C29; z-index: 100;}
 #header a {text-decoration:none;}
 .header-link {position: absolute; left: 0; top: 0; width:200px; height:56px; background: url("i/logo-s.png") no-repeat 5px 10px; border-bottom: solid 2px #EF5C29;}
 
